--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+<style>
+table, th, td {
+	border: 1px solid black;
+}
+</style>
 	<body></body>
 	<script type="text/javascript" src="dashboard.bundle.js"></script>
 </html>
