--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,7 +1,13 @@
 <html>
 <style>
 table, th, td {
-	border: 1px solid black;
+	border: 1px solid lightgray;
+}
+tr.lower td{
+	border: 1px solid green;
+}
+tr.higher td{
+	border: 1px solid red;
 }
 </style>
 	<body></body>
